# sqlcompose

./: .coveragerc  .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: python-publish.yml  python-test-coverage.yml  python-test.yml
src/sqlcompose/: __init__.py  __main__.py
tests/: circular_left.sql  circular_right.sql  existing_include.sql  main-query.sql  non_existing_include.sql  test.py  test_compat.py  test_console.py
tests/includes/: included-query2.sql  included-query3.sql
