[project]
name = "sqlcompose"
version = "0.0.1"
description = "Composition of linked SQL files"
keywords = ["sql", "composition", "windows", "linux"]
readme = "README.md"
authors = [
    { name = "Anders Madsen", email = "anders.madsen@alphavue.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Development Status :: 6 - Mature",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "License :: MIT",
    "Typing :: Typed"
]
dependencies = []
requires-python = ">=3.10"

[project.urls]
repository = "https://github.com/apmadsen/sqlcompose"

[project.scripts]
"sqlcompose" = "sqlcompose.main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=6.1.0",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"